[package]
name = "probe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"], default-features = false }
hyper = { version = "1.6.0", features = ["client"] }
clap = { version = "4.5.28", features = ["derive"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "http2"] }

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
strip = true
panic = "abort"
