[package]
name = "probe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"], default-features = false }
hyper = { version = "1.6.0", features = ["client"] }
clap = { version = "4.5.28", features = ["derive"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "http2"] }
tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots", "rustls-native-certs", "rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots", "rustls-native-certs", "rustls-tls-native-roots"] }
futures-util = "0.3.31"
rustls = { version = "0.23.22", features = ["aws-lc-rs"] }
crossterm = { version = "0.28.1" }

[dev-dependencies]
hyper = { version = "1.6.0", features = ["client", "server"] }
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "http2", "server", "server-graceful"] }
http-body-util = "0.1.2"

[profile.release]
lto = true
opt-level = "s"
debug = false
debug-assertions = false
strip = true
panic = "abort"
